test/invalid/undefined_goal.pks
// error: unknown action or goal 'no_such_goal'
goal bad {
    no_such_goal();
}
